Fix z-index

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -536,7 +536,7 @@ body {
   position: fixed;
   top: 38vh;
   width: 40vw;
-  z-index: 2;
+  z-index: 4;
 
   &--icon {
     align-items: center;
@@ -594,7 +594,7 @@ body {
   position: fixed;
   top: 10vh;
   width: 80vw;
-  z-index: 2;
+  z-index: 4;
 
   &--cell {
     border: 1px solid black;
@@ -687,5 +687,5 @@ body {
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 1;
+  z-index: 3;
 }
